--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nasim Makaremi Nia - Visual Artist</title>
+
+  <!-- ✅ SEO Title and Meta Description -->
+  <title>Nasim Makaremi Nia – Visual Artist | Painting, Embroidery, Exhibitions</title>
+  <meta name="description" content="Nasim Makaremi Nia is a visual artist specializing in painting, textiles, and installations, based in Newfoundland and Labrador. View her portfolio, exhibitions, and contact info.">
+
+
+
+
+
+
 
   <!-- SEO Meta Description -->
   <meta name="description" content="Nasim Makaremi Nia is a visual artist based in Newfoundland and Labrador, working across painting, embroidery, and mixed media. Explore her portfolio, CV, and exhibitions." />
