--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
         <!-- Slide 1 -->
         <div class="swiper-slide">
           <div class="aspect-w-3 aspect-h-4">
-            <img src="IMG_2473-1.jpg" alt="Cryptic Dimensions" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+            <img src="IMG_2473-1.jpg" alt="Cryptic Dimensions" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
           </div>
           <p class="text-sm mt-1 text-center">
 <br />
@@ -124,7 +127,10 @@
         <!-- Slide 2 -->
         <div class="swiper-slide">
           <div class="aspect-w-3 aspect-h-4">
-            <img src="mpluseWeb-_DSC3709.jpg" alt="Between Here and There" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+            <img src="mpluseWeb-_DSC3709.jpg" alt="Between Here and There" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
           </div>
           <p class="text-sm mt-1 text-center">
 <br />
@@ -137,7 +143,10 @@
         <!-- Slide 3 -->
         <div class="swiper-slide">
           <div class="aspect-w-3 aspect-h-4">
-            <img src="mpluseWeb-_DSC3707.jpg" alt="Between Here and There" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+            <img src="mpluseWeb-_DSC3707.jpg" alt="Between Here and There" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
           </div>
           <p class="text-sm mt-1 text-center">
 <br />
@@ -150,7 +159,9 @@
         <!-- Slide 4 -->
         <div class="swiper-slide">
           <div class="aspect-w-3 aspect-h-4">
-            <img src="OBCL2129 (2).jpg" alt="Shapes and Shadows, an Intersection of Identities" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+            <img src="OBCL2129 (2).jpg" alt="Shapes and Shadows, an Intersection of Identities" onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
           </div>
           <p class="text-sm mt-1 text-center">
 <br />
@@ -163,7 +174,9 @@
         <!-- Slide 5 -->
         <div class="swiper-slide">
           <div class="aspect-w-3 aspect-h-4">
-            <img src="Untitled_Instalation View_1.jpg" alt="Cryptic Dimensions" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+            <img src="Untitled_Instalation View_1.jpg" alt="Cryptic Dimensions" onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
           </div>
           <p class="text-sm mt-1 text-center">
 <br />
@@ -176,7 +189,10 @@
         <!-- Slide 6 -->
         <div class="swiper-slide">
           <div class="aspect-w-3 aspect-h-4">
-            <img src="IMG_1494.jpg" alt="Refracted Secrets" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+            <img src="IMG_1494.jpg" alt="Refracted Secrets" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
           </div>
           <p class="text-sm mt-1 text-center">
 <br />
@@ -211,9 +227,12 @@
  
       <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_4755 (1).jpg" alt="Secret of Carpet" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="IMG_4755 (1).jpg" alt="Secret of Carpet" onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
-        <p class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105">
+        <p class="text-sm mt-1">
+<br />
           Secret of Carpet<br />
           Medium: Tampons, embroidery threads on canvas.<br />
           Dimensions: 36 .24 Inches<br />
@@ -223,9 +242,13 @@
 
 <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_7207.jpg" alt="Still...!" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="IMG_7207.jpg" alt="Still...!" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           Still...!<br />
           Medium: Drawing with Pencil and Colored Pencil on Paper.<br />
           Dimensions: 18.24 Inches<br />
@@ -237,9 +260,15 @@
 
  <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_8377.JPG" alt="Untitled" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+         
+        <img src="IMG_8377.JPG" alt="Untitled" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
+         
         </div>
         <p class="text-sm mt-1">
+<br />
           Untitled<br />
           Medium: Photo transfer, oil paint, and drawing on folded canvas<br />
           Dimensions: 30.20.10 Inches.<br />
@@ -251,9 +280,13 @@
 
      <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_0638.jpg" alt="Secret Codes-3" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="IMG_0638.jpg" alt="Secret Codes-3" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           Secret Codes-3<br />
           Medium: Drawing with pencil on paper.<br />
           Dimensions: 8.8 Inches<br />
@@ -266,9 +299,13 @@
 
       <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="p (1).jpg" alt="Partnership" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="p (1).jpg" alt="Partnership" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           Partnership<br />
           Medium: Old Iranian photograph, Mixed media with oil paint, and pen drawing on canvas.<br />
           Dimensions: 36.36 Inches<br />
@@ -278,9 +315,13 @@
 
  <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_3026.jpg" alt="Tuckaway" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="IMG_3026.jpg" alt="Tuckaway" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           Tuckaway<br />
           Medium: Drawing with pencil on paper.<br />
           Dimensions: 7.7.7 Inches<br />
@@ -291,9 +332,13 @@
 
   <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="mpluseWeb-_DSC5421.jpg" alt="In the Warp and Weft" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="mpluseWeb-_DSC5421.jpg" alt="In the Warp and Weft" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           In the Warp and Weft<br />
           Medium: Hand embroidery on sanitary pad.<br />
           Year: 2021
@@ -304,9 +349,13 @@
 
       <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_2716.jpg" alt="Untitled" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="IMG_2716.jpg" alt="Untitled" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           Untitled<br />
           Medium: Drawing with pencil on folded paper.<br />
           Dimensions: 29.15.9 Inches<br />
@@ -318,9 +367,13 @@
 
       <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="mpluseWeb-_DSC3711.jpg" alt="Memory of Dome" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="mpluseWeb-_DSC3711.jpg" alt="Memory of Dome" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           Memory of Dome<br />
           Medium: Hand embroidery sanitary pads, Cut mirrors, and acrylic on canvas.<br />
           Dimensions:24 Inches in diameter.<br />
@@ -332,9 +385,13 @@
 
       <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_0784.jpg" alt="Tuckaway-1" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="IMG_0784.jpg" alt="Tuckaway-1" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           Tuckaway<br />
           Medium: Drawing with pencil on folded paper.<br />
           Dimensions: 7.7.7 Inches<br />
@@ -344,9 +401,13 @@
 
 <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_0609.jpg" alt="Hidden Layers-2" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="IMG_0609.jpg" alt="Hidden Layers-2" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm mt-1">
+<br />
           Hidden Layers-2<br />
           Medium: Old Iranian photograph, Mixed media with oil paint, and pen drawing on canvas.<br />
           Dimensions: 36.36 Inches<br />
@@ -358,9 +419,13 @@
 
  <div>
         <div class="aspect-w-3 aspect-h-4">
-        <img src="IMG_3208.jpg" alt="Untitled" class="object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105" />
+        <img src="IMG_3208.jpg" alt="Untitled" 
+onclick="openModal(this.src)"
+  class="cursor-zoom-in object-cover rounded-lg transition-transform duration-300 ease-in-out hover:scale-105"
+/>
         </div>
         <p class="text-sm ma-1">
+<br />
           Untitled<br />
           Medium: Drawing with pencil on folded paper, Cut mirror<br />
           Dimensions:  36.36 Inches.<br />
@@ -770,5 +835,34 @@
       },
     });
   </script>
+
+
+<!-- Modal for Enlarged Image -->
+<div id="imageModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden">
+  <span onclick="closeModal()" class="absolute top-6 right-8 text-white text-3xl cursor-pointer">&times;</span>
+  <img id="modalImage" class="max-w-3xl max-h-[90vh] rounded-lg shadow-lg border-4 border-white" />
+</div>
+
+
+<script>
+  function openModal(src) {
+    const modal = document.getElementById('imageModal');
+    const modalImage = document.getElementById('modalImage');
+    modalImage.src = src;
+    modal.classList.remove('hidden');
+  }
+
+  function closeModal() {
+    document.getElementById('imageModal').classList.add('hidden');
+  }
+
+  // Optional: close modal when clicking outside image
+  document.getElementById('imageModal').addEventListener('click', function (e) {
+    if (e.target === this) closeModal();
+  });
+</script>
+
+
+
 </body>
 </html>
