--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ onclick="openModal(this.src)"
           <p class="text-sm mt-1 text-center">
 <br />
             Cryptic Dimensions<br />
-            Craft Council of Newfoundland and Labrador<br />
+            Craft Council<br />
             Year: 2024
           </p>
         </div>
@@ -457,7 +457,7 @@ onclick="openModal(this.src)"
             Nasim Makaremi Nia is an artist and art educator based in Newfoundland and Labrador. She holds an MSc in Solid-State Physics and a Master of Fine Arts (MFA) from Grenfell Campus, Memorial University of Newfoundland and Labrador. Her multidisciplinary practice includes painting, drawing, printmaking, and textiles, with her physics background playing a significant role in shaping her artistic perspective.
           </p>
           <p class="reveal" style="transition-delay: 0.2s;">
-            Nasim has exhibited her work in various solo and group exhibitions, including at The Rooms Provincial Art Gallery (NL), Eastern Edge Gallery (NL), Ottawa School of Art (ON), and the Craft Council of Newfoundland and Labrador. She has received the Elizabeth Greenshields Foundation Grant and the ArtsNL Professional Project Grant.
+            Nasim has exhibited her work in various solo and group exhibitions, including at The Rooms Provincial Art Gallery (NL), Eastern Edge Gallery (NL), Ottawa School of Art (ON), and the Craft Council (NL). She has received the Elizabeth Greenshields Foundation Grant and the ArtsNL Professional Project Grant.
           </p>
           <p class="reveal" style="transition-delay: 0.3s;">
             Her work explores themes such as humanity, lived experience, women's emotions, and immigration. She uses elements like animals, sanitary pads, and folded paper to address censorship and explore connections to land and identity. In 2022, she received the Emerging Artist Award at the Excellence in Visual Arts Awards presented by VANL-CARFAC.
