--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ onclick="openModal(this.src)"
           <p class="text-sm mt-1 text-center">
 <br />
             Cryptic Dimensions<br />
-            Craft Council of Newfoundland and Labrador<br />
+            Craft Council<br />
             Year: 2024
           </p>
         </div>
